--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -2,13 +2,19 @@
   &-1
     animation: float1 3.5s ease-in-out infinite alternate
     position: absolute
-    top: 40%
-    right: 50%
+    top: 10%
+    right: 58%
   &-2
     animation: float1 2.8s ease-in-out infinite alternate
     position: absolute
+    top: 0%
+    right: 18%
+  
+  &-3
+    animation: float1 2.8s ease-in-out infinite alternate
+    position: absolute
     top: 51%
-    right: 30%
+    right: 10%
 
 
 @keyframes float1
