--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -23,3 +23,9 @@
 
   100%
     transform: translateY(0px)
+
+.fca
+  background-color: #DBEEFE !important
+
+.fcb
+  background-color: #FFF2CA !important
