--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -35,3 +35,9 @@
 
 .fcd
   background-color: #F5FAFE !important
+
+.fce
+  background-color: #FFFFFF !important
+
+.fcz
+  background-color: #4DD0E1 !important
