--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -39,5 +39,11 @@
 .fce
   background-color: #FFFFFF !important
 
+.fcf
+  background-color: #FFF7E0 !important
+
+.fcg
+  background-color: #F5FAFE !important
+
 .fcz
   background-color: #4DD0E1 !important
