--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -54,7 +54,8 @@
 .acordion__accion__btn--a 
   background-color: #FECA2E !important
 
-
+.tabs
+  background-color: #E8E8E8 !important
 
 
 
@@ -141,3 +142,4 @@
   h4, p
     color: #12263F
     opacity: 1
+    
