--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -28,6 +28,9 @@
   background-color: #DBEEFE !important
 
 .fcb
+  background-color: #BDDCF6 !important
+
+.acordion__activo
   background-color: #FFF2CA !important
 
 .fcc
@@ -48,6 +51,9 @@
 .fch
   background-color: #FFF2CA !important
 
+.fci
+  background-color: #FFFCF2 !important
+
 .fcz
   background-color: #4DD0E1 !important
 
@@ -56,6 +62,25 @@
 
 .tabs
   background-color: #E8E8E8 !important
+
+.bloque-texto-q 
+  position: relative;
+
+.bloque-texto-q.color-acento-contenido:before 
+  background-color: #E7F3FF !important
+
+.bloque-texto-q:before 
+  content: '';
+  display: block;
+  position: absolute;
+  top: 70%;
+  bottom: 0;
+  left: 30%;
+  right: 0%;
+
+.tabla1 td 
+  color: $color-sistema-texto
+  text-align: center
 
 
 
