--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -82,6 +82,11 @@
   color: $color-sistema-texto
   text-align: center
 
+.color-final
+  background-color: #FFF2CA !important
+
+.color-tarjetas
+  background-color: #F5FAFE !important
 
 
 
