--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -88,6 +88,9 @@
 .color-tarjetas
   background-color: #F5FAFE !important
 
+.color-tablas
+  background-color: #F4FEFF !important
+
 .w-80
   img
     width: 80px
